# Copyright 2026 Canonical
# See LICENSE file for licensing details.

[project]
name = "charmed-etcd-benchmark-operator"
version = "0.0.1"
requires-python = ">=3.10"

# Dependencies of the charm code
# You should include the dependencies of the code in src/. You should also include the
# dependencies of any charmlibs that the charm uses (copy the dependencies from PYDEPS).
dependencies = [
    "ops>=3,<4",
    "charmlibs-interfaces-tls-certificates",
    "charmlibs-snap",
    "data-platform-helpers",
    "tenacity",
    "jubilant",
    "pytest-jubilant==1.3.0",
    "ops[testing]",
    "pytest",
    "charmlibs-systemd>=1.0.0",
    "jinja2",
    "prometheus-client",
    "cosl>=0.0.50",
    "requests>=2.33.1",
]

[dependency-groups]
charm = [
    "ops>=3,<4",
    "charmlibs-interfaces-tls-certificates",
    "charmlibs-snap",
    "data-platform-helpers",
    "tenacity",
    "prometheus-client",
    "cosl>=0.0.50"
]
# Dependencies of linting and static type checks
lint = [
    "ruff",
    "codespell",
    "pyright",
    "jinja2",
    "charmlibs-systemd>=1.0.0",
    "requests",
    {include-group = "charm"},
]
# Dependencies of unit tests
unit = [
    "coverage[toml]",
    "ops[testing]",
    "pytest",
    "jinja2",
    "charmlibs-systemd>=1.0.0",
    {include-group = "charm"},
]
# Dependencies of integration tests
integration = [
    "jubilant",
    "pytest",
    "python-dateutil",
    "jubilant",
    "pytest-jubilant==1.3.0",
    "requests",
    "tenacity"
    #TODO: remove pytest-jubilant once https://github.com/canonical/charmcraft/issues/2461 is fixed, i.e, pack no longer needed
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "tests"]
